objects/Project_Checklist__c.object
<CustomObject>
    <description>Contains the Checklist encompassing items, answers; and associated with a Project.</description>
    <fields>
        <fullName>Date_Last_Item_Modified__c</fullName>
        <label>Date Last Item Modified</label>
        <summarizedField>Checklist_Answer__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>Checklist_Answer__c.Project_Checklist__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Item_Category__c</fullName>
        <label>Item Category</label>
        <referenceTo>Checklist_Category__c</referenceTo>
        <relationshipName>Project_Checklists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_of_Answers__c</fullName>
        <label>Number of Answers</label>
        <summaryForeignKey>Checklist_Answer__c.Project_Checklist__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Items_Collected__c</fullName>
        <description>Number of Items marked as &quot;Yes&quot; with having received the item.</description>
        <label>Number of Items Collected</label>
        <summaryFilterItems>
            <field>Checklist_Answer__c.Response__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Checklist_Answer__c.Project_Checklist__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Items_Not_Yet_Collected__c</fullName>
        <label>Number of Items Not Yet Collected</label>
        <summaryFilterItems>
            <field>Checklist_Answer__c.Response__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Checklist_Answer__c.Project_Checklist__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Items_Remaining__c</fullName>
        <formula>Number_of_Items_Not_Yet_Collected__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Items Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Items__c</fullName>
        <formula>Item_Category__r.Number_of_Checklist_Items__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_NA_Items__c</fullName>
        <description>Number of Items marked as &quot;N/A&quot;</description>
        <label>Number of NA Items</label>
        <summaryFilterItems>
            <field>Checklist_Answer__c.Response__c</field>
            <operation>equals</operation>
            <value>N/A</value>
        </summaryFilterItems>
        <summaryForeignKey>Checklist_Answer__c.Project_Checklist__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <formula>IF( Number_of_Items__c &gt; 0 , (  Number_of_Items_Collected__c / ( Number_of_Items__c -  Number_of_NA_Items__c ) ), 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Discovery Checklists</relationshipLabel>
        <relationshipName>Project_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Discovery Checklist</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CL-{000000000}</displayFormat>
        <label>Checklist ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discovery Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>